<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="br.edu.ifpi.helloads.MainActivity">

    <EditText
        android:id="@+id/num1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/hint_num"
        android:inputType="number"/>

    <RadioGroup
        android:id="@+id/operacoes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <RadioButton
            android:id="@+id/soma"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_soma"/>
        <RadioButton
            android:id="@+id/subtracao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_sub"/>
        <RadioButton
            android:id="@+id/multiplicaccao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_mult"/>
        <RadioButton
            android:id="@+id/divisao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_divisao"/>

    </RadioGroup>


    <EditText
        android:id="@+id/num2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/hint_num"
        android:inputType="number"/>

    <Button
        android:id="@+id/btn_calcular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_calcular"
        android:onClick="calcular"/>


</LinearLayout>
